--- a/cpapiweb/app/templates/login.html
+++ b/cpapiweb/app/templates/login.html
@@ -1,6 +1,6 @@
 <html>
     <body>
-        <h1>CPAPI - Check Point API Tool</h1>
+        <h1>CPAPI - Check Point Web API Tool</h1>
         <form action="" method="post" name="login">
             <p>
                 IP Address: <br>
