--- a/cpapiweb/app/templates/commands.html
+++ b/cpapiweb/app/templates/commands.html
@@ -8,7 +8,7 @@
             </p>
             <p>
                 Payload: <br>
-                <input type="text" name="payload"><br>
+                <input type="text" name="payload" value="{}"><br>
             </p>
             <p><input type="submit" value="Submit"></p><br>
         </form>
