--- a/cpapiweb/app/templates/commands.html
+++ b/cpapiweb/app/templates/commands.html
@@ -14,8 +14,8 @@
         </form>
         {% if response %}
         <p>
-        {{ response }}
-        {% endif %}
+            {{ response }}<br>
         </p>
+        {% endif %}
     </body>
 </html>
