--- a/cpapiweb/app/templates/commands.html
+++ b/cpapiweb/app/templates/commands.html
@@ -1,21 +1,33 @@
 <html>
-    <body>
-        <h1>CPAPI - Send Commands</h1>
-        <form action="" method="post" name="login">
+    <head>
+        <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/main.css') }}">
+    </head>
+        <body>
+            <h1>
+                CPAPI
+            </h1>
             <p>
-                Command: <br>
-                <input type="text" name="command"><br>
+                Send custom commands. See API Reference for details.<br>
+                <a href="https://sc1.checkpoint.com/documents/latest/APIs/index.html#introduction~v1.1" target="_blank">API Reference</a>
             </p>
+            <h2>
+                Send command
+            </h2>
+            <form action="" method="post" name="login">
+                <p>
+                    Command: <br>
+                    <input type="text" name="command"><br>
+                </p>
+                <p>
+                    Payload: <br>
+                    <input type="text" name="payload" value="{}"><br>
+                </p>
+                <p><input type="submit" value="Submit"></p><br>
+            </form>
+            {% if response %}
             <p>
-                Payload: <br>
-                <input type="text" name="payload" value="{}"><br>
+                {{ response }}<br>
             </p>
-            <p><input type="submit" value="Submit"></p><br>
-        </form>
-        {% if response %}
-        <p>
-            {{ response }}<br>
-        </p>
-        {% endif %}
-    </body>
+            {% endif %}
+        </body>
 </html>
