--- a/cpapiweb/app/templates/login.html
+++ b/cpapiweb/app/templates/login.html
@@ -1,27 +1,40 @@
 <html>
-    <body>
-        <h1>CPAPI - Check Point Web API Tool</h1>
-        <form action="" method="post" name="login">
+    <head>
+        <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/main.css') }}">
+    </head>
+        <body>
+            <h1>
+                CPAPI - Check Point Web API Tool
+            </h1>
             <p>
-                IP Address: <br>
-                <input type="text" name="ipaddress"><br>
+                Written and maintained by Joshua Hatter. <br>
+                Submit any issues at
+                <a href="https://github.com/themadhatterz/cpapi/issues" target="_blank">Github</a>.
             </p>
-            <p>
-                Username: <br>
-                <input type="text" name="username"><br>
-            </p>
-            <p>
-                Password: <br>
-                <input type="password" name="password"><br>
-            </p>
-            <p>
-                Domain: <br>
-                <input type="text" name="domain"><br>
-            </p>
-            <p><input type="submit" value="Log In"></p><br>
-            {% if error %}
-            <p> {{ error }} </p>
-            {% endif %}
-        </form>
-    </body>
+            <h2>
+                Login
+            </h2>
+            <form action="" method="post" name="login">
+                <p>
+                    IP Address: <br>
+                    <input type="text" name="ipaddress"><br>
+                </p>
+                <p>
+                    Username: <br>
+                    <input type="text" name="username"><br>
+                </p>
+                <p>
+                    Password: <br>
+                    <input type="password" name="password"><br>
+                </p>
+                <p>
+                    Domain: <br>
+                    <input type="text" name="domain"><br>
+                </p>
+                <p><input type="submit" value="Log In"></p><br>
+                {% if error %}
+                <p> {{ error }} </p>
+                {% endif %}
+            </form>
+        </body>
 </html>
