--- a/cpapiweb/app/templates/commands.html
+++ b/cpapiweb/app/templates/commands.html
@@ -3,6 +3,10 @@
         <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/main.css') }}">
     </head>
         <body>
+            <ul>
+                <li><a href="commands">Custom Command</a></li>
+                <li><a href="addhost">Add Host</a></li>
+            </ul>
             <h1>
                 CPAPI
             </h1>
@@ -11,7 +15,7 @@
                 <a href="https://sc1.checkpoint.com/documents/latest/APIs/index.html#introduction~v1.1" target="_blank">API Reference</a>
             </p>
             <h2>
-                Send command
+                Send Command
             </h2>
             <form action="" method="post" name="login">
                 <p>
