--- a/cpapiweb/app/static/styles/main.css
+++ b/cpapiweb/app/static/styles/main.css
@@ -3,6 +3,10 @@ a, h1, h2       { color: #000000; }
 h1, h2          { font-family: 'Georgia', serif; margin: 0; }
 h1              { border-bottom: 2px solid #eee; }
 h2              { font-size: 1.2em; }
+ul              { list-style-type: none; margin: 0; padding: 0; overflow: hidden; background-color: #333; }
+li              { float: left; }
+li a            { display: block; color: white; text-align: center; padding: 14px 16px; text-decoration: none; }
+li a:hover      { background-color: #111; }
 
 .page           { margin: 2em auto; width: 35em; border: 5px solid #ccc; padding: 0.8em; background: white; }
 .entries        { list-style: none; margin: 0; padding: 0; }
@@ -13,3 +17,4 @@ h2              { font-size: 1.2em; }
 .metanav        { text-align: right; font-size: 0.8em; padding: 0.3em; margin-bottom: 1em; background: #fafafa; }
 .flash          { background: #cee5F5; padding: 0.5em; border: 1px solid #aacbe2; }
 .error          { background: #f0d6d6; padding: 0.5em; }
+.active         { background-color: #4CAF50; }
