--- a/cpapiweb/app/static/styles/main.css
+++ b/cpapiweb/app/static/styles/main.css
@@ -17,4 +17,4 @@ li a:hover      { background-color: #111; }
 .metanav        { text-align: right; font-size: 0.8em; padding: 0.3em; margin-bottom: 1em; background: #fafafa; }
 .flash          { background: #cee5F5; padding: 0.5em; border: 1px solid #aacbe2; }
 .error          { background: #f0d6d6; padding: 0.5em; }
-.active         { background-color: #4CAF50; }
+.active         { background-color: #c53a68; }
