minor text fixes

--- a/cpapiweb/app/templates/addhost.html
+++ b/cpapiweb/app/templates/addhost.html
@@ -10,7 +10,7 @@
                 Add single host. Automatic Publish<br>
             </p>
             <h2>
-                Send Command
+                Add Host
             </h2>
             <form action="" method="post" name="login">
                 <p>
