--- a/cpapiweb/app/templates/addnetwork.html
+++ b/cpapiweb/app/templates/addnetwork.html
@@ -10,7 +10,7 @@
                 Add single network. Automatic Publish<br>
             </p>
             <h2>
-                Send Command
+                Add Network
             </h2>
             <form action="" method="post" name="login">
                 <p>
