--- a/cpapiweb/app/templates/custom.html
+++ b/cpapiweb/app/templates/custom.html
@@ -7,11 +7,11 @@
             {{nav.mynavbar.render()}}
             {% endblock %}
             <p>
-                Send custom commands. See API Reference for details. 
+                Send custom commands. See API Reference for details.
                 <a href="https://sc1.checkpoint.com/documents/latest/APIs/index.html#introduction~v1.1" target="_blank">API Reference</a>
             </p>
             <h2>
-                Send Command
+                Custom Command
             </h2>
             <form action="" method="post" name="login">
                 <p>
