--- a/cpapiweb/app/templates/login.html
+++ b/cpapiweb/app/templates/login.html
@@ -7,9 +7,9 @@
                 CPAPI - Check Point Web API Tool
             </h1>
             <p>
-                Written and maintained by Joshua Hatter. <br>
-                Submit any issues at
-                <a href="https://github.com/themadhatterz/cpapi/issues" target="_blank">Github</a>.
+                Written and maintained by Joshua Hatter. Submit any issues at
+                <a href="https://github.com/themadhatterz/cpapi/issues" target="_blank">Github</a>.<br><br>
+                Be sure your Manager API is enabled and accepting connections from external addresses.<br>
             </p>
             <h2>
                 Login
