--- a/cpapiweb/app/templates/logout.html
+++ b/cpapiweb/app/templates/logout.html
@@ -3,13 +3,19 @@
         <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/main.css') }}">
     </head>
         <body>
-            <p>
-                You have been logged out. <a href="/login">Return to Login</a>
-            </p>
-            {% if response %}
-            <p>
-                {{ response }}<br>
-            </p>
-            {% endif %}
+            {% block navbar %}
+            {{nav.mynavbar.render()}}
+            {% endblock %}
+            <h1>
+                Logout<br>
+            </h1>
+            <form action="" method="post" name="logout">
+                <p>
+                    Discard and Logout :
+                    <input type="submit" name="Discard" value="Discard"><br><br>
+                    Publish and Logout :
+                    <input type="submit" name="Publish" value="Publish"><br><br>
+                </p>
+            </form>
         </body>
 </html>
