--- a/cpapiweb/app/static/styles/main.css
+++ b/cpapiweb/app/static/styles/main.css
@@ -7,6 +7,7 @@ ul              { list-style-type: none; margin: 0; padding: 0; overflow: hidden
 li              { float: left; }
 li a            { display: block; color: white; text-align: center; padding: 14px 16px; text-decoration: none; }
 li a:hover      { background-color: #111; }
+table, th, td   { border: 1px solid black; }
 
 .page           { margin: 2em auto; width: 35em; border: 5px solid #ccc; padding: 0.8em; background: white; }
 .entries        { list-style: none; margin: 0; padding: 0; }
