--- a/cpapiweb/app/templates/login.html
+++ b/cpapiweb/app/templates/login.html
@@ -33,7 +33,9 @@
                 </p>
                 <p><input type="submit" value="Log In"></p><br>
                 {% if error %}
-                <p> {{ error }} </p>
+                <p>
+                    {{ error }}
+                </p>
                 {% endif %}
             </form>
         </body>
