--- a/cpapiweb/app/templates/showrules.html
+++ b/cpapiweb/app/templates/showrules.html
@@ -15,7 +15,11 @@
             <form action="" method="post" name="showrules">
                 <p>
                     Rulebase:
-                    <input type="text" name="rulebase">
+                    <select name="layer">
+                        {% for layer in alllayers %}
+                            <option value="{{ layer }}">{{ layer }}</option>
+                        {% endfor %}
+                    </select>
                     <input type="submit" value="Submit"><br>
                 </p>
             </form>
