--- a/cpapiweb/app/templates/custom.html
+++ b/cpapiweb/app/templates/custom.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/main.css') }}">
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/main.css') }}">
     </head>
         <body>
             {% block navbar %}
@@ -25,9 +25,9 @@
                 <p><input type="submit" value="Submit"></p><br>
             </form>
             {% if response %}
-            <p>
+            <pre id="json">
                 {{ response }}<br>
-            </p>
+            </pre>
             {% endif %}
         </body>
 </html>
