--- a/cpapiweb/app/templates/addnetwork.html
+++ b/cpapiweb/app/templates/addnetwork.html
@@ -28,9 +28,9 @@
                 <p><input type="submit" value="Submit"></p><br>
             </form>
             {% if response %}
-            <p>
+            <pre id="json">
                 {{ response }}<br>
-            </p>
+            </pre>
             {% endif %}
         </body>
 </html>
