--- a/cpapiweb/app/static/styles/main.css
+++ b/cpapiweb/app/static/styles/main.css
@@ -1,4 +1,4 @@
-body            { font-family: sans-serif; background: #a5b6d1; }
+body            { font-family: sans-serif; background: #b7b7b7; }
 a, h1, h2       { color: #000000; }
 h1, h2          { font-family: 'Georgia', serif; margin: 0; }
 h1              { border-bottom: 2px solid #eee; }
@@ -8,6 +8,9 @@ li              { float: left; }
 li a            { display: block; color: white; text-align: center; padding: 14px 16px; text-decoration: none; }
 li a:hover      { background-color: #111; }
 table, th, td   { border: 1px solid black; }
+tr:hover td     { background-color: #DAEAFF}
+th              { background-color: #576372; color: #ffffff; }
+td              { background-color: #F8F8F8 }
 
 .page           { margin: 2em auto; width: 35em; border: 5px solid #ccc; padding: 0.8em; background: white; }
 .entries        { list-style: none; margin: 0; padding: 0; }
