--- a/cpapiweb/app/templates/addnetwork.html
+++ b/cpapiweb/app/templates/addnetwork.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/main.css') }}">
+        <link rel="shortcut icon" href="{{ url_for('static', filename='cpapi.ico') }}">
     </head>
         <body>
             {% block navbar %}
