--- a/cpapiweb/app/templates/addobject.html
+++ b/cpapiweb/app/templates/addobject.html
@@ -8,12 +8,34 @@
             {{nav.mynavbar.render()}}
             {% endblock %}
             <h1>
+                Add Host
+            </h1>
+            <p>
+                Add single host. Automatic Publish<br>
+            </p>
+            <form action="" method="post" name="host">
+                <p>
+                    Host Name: <br>
+                    <input type="text" name="hostname"><br>
+                </p>
+                <p>
+                    IP Address: <br>
+                    <input type="text" name="ipv4address"><br>
+                </p>
+                <p><input name="host" type="submit" value="Submit"></p><br>
+            </form>
+            {% if hostresponse %}
+            <pre id="json">
+                {{ hostresponse }}<br>
+            </pre>
+            {% endif %}
+            <h1>
                 Add Network
             </h1>
             <p>
                 Add single network. Automatic Publish<br>
             </p>
-            <form action="" method="post" name="login">
+            <form action="" method="post" name="network">
                 <p>
                     Network Name: <br>
                     <input type="text" name="netname"><br>
@@ -26,11 +48,11 @@
                     Subnet Mask: <br>
                     <input type="text" name="mask"><br>
                 </p>
-                <p><input type="submit" value="Submit"></p><br>
+                <p><input name="network" type="submit" value="Submit"></p><br>
             </form>
-            {% if response %}
+            {% if netresponse %}
             <pre id="json">
-                {{ response }}<br>
+                {{ netresponse }}<br>
             </pre>
             {% endif %}
         </body>
