--- a/cpapiweb/app/templates/importobj.html
+++ b/cpapiweb/app/templates/importobj.html
@@ -16,20 +16,20 @@
             <h2>
                 Import Hosts
             </h2>
-            <form action="" method="post" name="host">
+            <form action="" method="post" name="host" enctype="multipart/form-data">
                 <p>
                     Hosts File :
-                    <input type="file" name="hosts" placeholder="/path/hosts.csv"><br>
+                    <input type="file" name="hosts"><br>
                 </p>
                 <p><input type="submit" value="Upload"></p><br>
             </form>
             <h2>
                 Import Networks
             </h2>
-            <form action="" method="post" name="network">
+            <form action="" method="post" name="network" enctype="multipart/form-data">
                 <p>
                     Networks File :
-                    <input type="file" name="networks" placeholder="/path/networks.csv"><br>
+                    <input type="file" name="networks"><br>
                 </p>
                 <p><input type="submit" value="Upload"></p><br>
             </form>
@@ -37,6 +37,6 @@
             <pre id="json">
                 {{ response }}<br>
             </pre>
-            {% endif %} -->
+            {% endif %}
         </body>
 </html>
