No threading. Sad day.

--- a/cpapiweb/app/templates/addobject.html
+++ b/cpapiweb/app/templates/addobject.html
@@ -12,8 +12,14 @@
             <div style="width: 100%" >
                 <div style="float:left; width: 70%">
                 <h1>
-                    Add Host
+                    Add Objects
                 </h1>
+                <p>
+                    Add objects one at a time.
+                </p>
+                <h2>
+                    Add Host
+                </h2>
                 <p>
                     Add single host. Automatic Publish<br>
                 </p>
@@ -28,9 +34,9 @@
                     </p>
                     <p><input name="host" type="submit" value="Submit"></p><br>
                 </form>
-                <h1>
+                <h2>
                     Add Network
-                </h1>
+                </h2>
                 <p>
                     Add single network. Automatic Publish<br>
                 </p>
