--- a/cpapiweb/app/templates/runcommand.html
+++ b/cpapiweb/app/templates/runcommand.html
@@ -28,7 +28,12 @@
                 </p>
                 <p><input type="submit" value="Submit"><br></p>
             </form>
-            {% if response %}
+            {% if error %}
+            <p>
+                {{ error }}
+            </p>
+            {% endif %}
+{% if response %}
 <pre>
 {% for task in response %}
 {{ task['target'] }} &#8208;&#8208; {{ task['status'] }}<br>
@@ -36,6 +41,6 @@ Response:
 {{ task['response'] }}<br><br>
 {% endfor %}
 </pre>
-            {% endif %}
+{% endif %}
         </body>
 </html>
