--- a/cpapiweb/app/templates/500.html
+++ b/cpapiweb/app/templates/500.html
@@ -11,8 +11,8 @@
                 You aren't supposed to be here...
             </h1>
             <p align="center">
-                Yet, here you are.<br>
-                If the issue persists please report details at:
+                ...Yet here you are.<br>
+                If the issue persists, please report details at:
                 <a href="https://github.com/themadhatterz/cpapi/issues" target="_blank">Github</a>.<br><br>
             </p>
         </body>
