--- a/cpapiweb/app/templates/showrules.html
+++ b/cpapiweb/app/templates/showrules.html
@@ -65,5 +65,9 @@
                     </tr>
                 {% endfor %}
             {% endif %}
+            <footer>
+                Submit any feedback and report issues at:
+                <a href="https://github.com/themadhatterz/cpapi/issues" target="_blank">Github</a>.
+            </footer>
         </body>
 </html>
