--- a/cpapiweb/app/templates/addobject.html
+++ b/cpapiweb/app/templates/addobject.html
@@ -64,5 +64,9 @@
 {% endif %}
                 <div>
             </div>
+            <footer>
+                Submit any feedback and report issues at:
+                <a href="https://github.com/themadhatterz/cpapi/issues" target="_blank">Github</a>.
+            </footer>
         </body>
 </html>
