--- a/cpapiweb/app/templates/logout.html
+++ b/cpapiweb/app/templates/logout.html
@@ -18,5 +18,9 @@
                     <input type="submit" name="Publish" value="Publish"><br><br>
                 </p>
             </form>
+            <footer>
+                Submit any feedback and report issues at:
+                <a href="https://github.com/themadhatterz/cpapi/issues" target="_blank">Github</a>.
+            </footer>
         </body>
 </html>
