--- a/cpapiweb/app/templates/runcommand.html
+++ b/cpapiweb/app/templates/runcommand.html
@@ -42,5 +42,9 @@ Response:
 {% endfor %}
 </pre>
 {% endif %}
+            <footer>
+                Submit any feedback and report issues at:
+                <a href="https://github.com/themadhatterz/cpapi/issues" target="_blank">Github</a>.
+            </footer>
         </body>
 </html>
