--- a/cpapiweb/app/templates/addobject.html
+++ b/cpapiweb/app/templates/addobject.html
@@ -101,7 +101,10 @@
                             </select>
                         </p>
                         <p><input name="addgroup" type="submit" value="Submit"></p><br>
-                    <form action="" method="post" name="addgroup">
+                        {% if error %}
+                            {{ error }}<br>
+                        {% endif %}
+                    </form>
                 </div>
                 <div style="float:right; width: 30%">
 {% if response %}
