--- a/cpapiweb/app/templates/login.html
+++ b/cpapiweb/app/templates/login.html
@@ -8,6 +8,8 @@
                 CPAPI - Check Point Web API Tool
             </h1>
             <p>
+                Submit any feedback and report issues at:
+                <a href="https://github.com/themadhatterz/cpapi/issues" target="_blank">Github</a>.<br>
                 Be sure your Manager API is enabled and accepting connections from external addresses.<br>
             </p>
             <h2>
@@ -37,9 +39,5 @@
                 {{ error }}
             </p>
             {% endif %}
-            <footer>
-                Submit any feedback and report issues at:
-                <a href="https://github.com/themadhatterz/cpapi/issues" target="_blank">Github</a>.
-            </footer>
         </body>
 </html>
