Warning and version information.

--- a/cpapiweb/app/templates/login.html
+++ b/cpapiweb/app/templates/login.html
@@ -5,7 +5,7 @@
     </head>
         <body>
             <h1>
-                CPAPI - Check Point Web API Tool
+                CPAPI - Check Point Web API Tool - Version 0.4.1
             </h1>
             <p>
                 Submit any feedback and report issues at:
