--- a/cpapiweb/app/templates/runcommand.html
+++ b/cpapiweb/app/templates/runcommand.html
@@ -11,7 +11,8 @@
                 Run Command
             </h1>
             <p>
-                Issue commands on Check Point devices.
+                Issue commands on Check Point devices.<br>
+                Caution, commands are issued in the shell of /bin/bash(expert) mode.<br>
             </p>
             <form action="" method="post" name="runcommand">
                 <p>
