--- a/cpapiweb/app/templates/custom.html
+++ b/cpapiweb/app/templates/custom.html
@@ -14,7 +14,7 @@
                 Send custom commands. See API Reference for details.
                 <a href="https://sc1.checkpoint.com/documents/latest/APIs/index.html#introduction~v1.1" target="_blank">API Reference</a>
             </p>
-            <form action="" method="post" name="login">
+            <form action="" method="post" name="command">
                 <p>
                     Command: <br>
                     <select name="command">
