--- a/cpapiweb/app/templates/500.html
+++ b/cpapiweb/app/templates/500.html
@@ -7,10 +7,10 @@
             {% block navbar %}
             {{nav.mynavbar.render()}}
             {% endblock %}
-            <h1 align="center">
+            <h1 id="center_align">
                 You aren't supposed to be here...
             </h1>
-            <p align="center">
+            <p id="center_align">
                 ...Yet here you are.<br>
                 If the issue persists, please report details at:
                 <a href="https://github.com/themadhatterz/cpapi/issues" target="_blank">Github</a>.<br><br>
