--- a/cpapiweb/app/templates/importobj.html
+++ b/cpapiweb/app/templates/importobj.html
@@ -9,8 +9,8 @@
             {{nav.mynavbar.render()}}
             {% endblock %}
             </div>
-            <div style="width: 100%" >
-                <div style="float:left; width: 70%">
+            <div id="div_100">
+                <div id="div_left_70">
             <h1>
                 Import Objects
             </h1>
@@ -56,7 +56,7 @@
             </p>
             {% endif %}
             </div>
-            <div style="float:right">
+            <div id="div_right">
                 {% if report %}
                 <p>
                     {% for item in report %}
