--- a/cpapiweb/app/templates/showrules.html
+++ b/cpapiweb/app/templates/showrules.html
@@ -25,7 +25,7 @@
                 </p>
             </form>
             {% if response %}
-                <table style="width:100%">
+                <table id="width_100">
                     <tr>
                         <th>Number</th>
                         <th>Name</th>
