--- a/app/static/styles/cpapi.css
+++ b/app/static/styles/cpapi.css
@@ -134,3 +134,74 @@ li a:hover {
     margin-left: auto;
     margin-right: auto;
 }
+
+.policyform {
+    width: 50%;
+    position: relative;
+    border-radius: 15px;
+    border: 2px solid #E65785;
+    padding: 20px;
+}
+
+.policyform label {
+    text-align: left;
+    left: 100%;
+}
+
+.policyform select {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    box-sizing: border-box;.
+}
+
+.policyform input[type=text] {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    box-sizing: border-box;.
+}
+
+.policyform input[type=submit] {
+    padding:5px 15px;
+    background:#E65785;
+    border:0 none;
+    cursor:pointer;
+    -webkit-border-radius: 5px;
+    border-radius: 5px;
+}
+
+.ruletable {
+    width: 100%;
+    position: relative;
+    border: 2px solid #E65785;
+    padding: 5px;
+    border-radius: 15px;
+}
+
+.ruletable table {
+    position: relative;
+    width: 100%;
+
+}
+
+.ruletable tr:hover td {
+    background-color: #DAEAFF
+}
+
+.ruletable th {
+    text-align: center;
+    background-color: #576372;
+    color: #ffffff;
+    border: 1px solid black;
+}
+
+.ruletable td {
+    text-align: center;
+    background-color: #F8F8F8;
+    border: 1px solid black;
+}
